refactor: update TypeScript configuration, remove obsolete files, and enhance documentation

--- a/packages/httl-website/src/content/introduction/why.mdx
+++ b/packages/httl-website/src/content/introduction/why.mdx
@@ -1,3 +1,17 @@
-# Welcome to HTTL
+# Why Not?
  
-Hello, world! why
+Well, it actually a good question, waht the reason of having a new language for relatively simple thing, elsepical ywhen there are already plenty of good tool/languages.
+The answer is in title ;) why not? As already mention there are buncj of good toll but each of them has their benefits and drawbacks.
+These are the basic driwers behind the HTTL:
+- **Simplicity**:  - mostly inspired by Python, each clause each consturction of language needs to be simplified to allow you write less code
+   e,g, you dont need to write conrtucaion like: `get {{baseur}}/api/user` etc. you can define the base path at the top of file and use simple form `get /user`
+- **Flexibility**: I am not a fun to run one request at a time, I prefer to run a bunch of them in one file, so I can write a query to get a token, then use it in the next query, maybe even different api etc. THat's what HTTL is about.
+- **Modularity**: It would be perfect to have a way to reuse the code, so you can define a query in one file and use it in another one.
+- **OpenApi Integration**: oh this is a favorite one - Yes it's about type checking and intellysense, long dream that came tru. finally :)
+- **Extensibility**: The language should be abel to easy to extend, so you can write your own plugins, or use the existing ones.
+
+All of this lead me to an idea to create this language, for developers 
+
+I've stoped using Postamnt since beggingin of 2025 (checkout my video how to replace Postman with HTTL **put_link_link**) 
+
+There is no better tool then a code that runs another code
