--- a/packages/httl-website/src/content/introduction/why.mdx
+++ b/packages/httl-website/src/content/introduction/why.mdx
@@ -3,6 +3,9 @@
 Well, it actually a good question, waht the reason of having a new language for relatively simple thing, elsepical ywhen there are already plenty of good tool/languages.
 The answer is in title ;) why not? As already mention there are buncj of good toll but each of them has their benefits and drawbacks.
 These are the basic driwers behind the HTTL:
+
+***??like mdx is a combination of markdown and jsx, HTTL is a combination of http and json, with some extra features.
+
 - **Simplicity**:  - mostly inspired by Python, each clause each consturction of language needs to be simplified to allow you write less code
    e,g, you dont need to write conrtucaion like: `get {{baseur}}/api/user` etc. you can define the base path at the top of file and use simple form `get /user`
 - **Flexibility**: I am not a fun to run one request at a time, I prefer to run a bunch of them in one file, so I can write a query to get a token, then use it in the next query, maybe even different api etc. THat's what HTTL is about.
