--- a/packages/httl-website/src/content/guide/api.mdx
+++ b/packages/httl-website/src/content/guide/api.mdx
@@ -1,3 +1,8 @@
-# Guide
+# Api
  
-Hello, world!
+For better anology you we can take Class and its Method relation 
+Requst is a menthod and API is a class.
+
+THe empty files has an api by default, so any directive any global header will be attached to the default api and will be used in the requests below.
+
+Stay tuned this feature will have significant evolvment and and impact on the Word. ;)
