--- a/packages/httl-website/src/content/guide/env-vars.mdx
+++ b/packages/httl-website/src/content/guide/env-vars.mdx
@@ -1,3 +1,10 @@
-# Guide
+# Environment Variables
  
-Hello, world!
+
+!!!!! rethink because it may violate security principles
+
+ HTTL_VAR_from_env
+
+Environment variables are a way to store configuration values that can be used in your queries.
+
+They are useful for storing values that are shared across multiple queries, such as base URLs, authentication tokens, or API keys.
