--- a/packages/httl-website/src/content/guide/comments.mdx
+++ b/packages/httl-website/src/content/guide/comments.mdx
@@ -1,71 +1,11 @@
-# Request
+# Comments
 
-That's alfa and omega, the basic building block. 
+Of course, you can add comments to your code, as of now thres one typ e of comment 
 
-
-* only lowercase but will send as upper case
-* verbs
-* verb and path should be on the same line
-* path starts with `/`
-
-## Form 
-
-#### Basic form:
 
 ```httl
-get https://reqres.in/api/users
+# one line comment
+
 ```
 
-#### Using @base directive:
-
-```httl
-@base: https://reqres.in/api
-
-get /users
-```
-
-#### Using @base directive:
-
-```httl
-@base: https://reqres.in/api
-
-get /users?page=2
-```
-
-
-
-```jsx {1,4-5}
-import 'nextra-theme-docs/style.css'
-
-export default function Nextra({ Component, pageProps }) {
-  const getLayout = Component.getLayout || (page => page)
-  return getLayout(<Component {...pageProps} />)
-}
-```
-
-### Title
-
-````mdx
-```jsx filename="_app.js"
-import 'nextra-theme-docs/style.css'
-
-export default function Nextra({ Component, pageProps }) {
-  const getLayout = Component.getLayout || (page => page)
-  return getLayout(<Component {...pageProps} />)
-}
-```
-````
-
-```jsx filename="_app.js"
-import 'nextra-theme-docs/style.css'
-
-export default function Nextra({ Component, pageProps }) {
-  const getLayout = Component.getLayout || (page => page)
-  return getLayout(<Component {...pageProps} />)
-}
-```
-
-## Supported Languages
-
-You can find a list of supported languages
-[here](https://github.com/shikijs/shiki/blob/main/docs/languages.md).
+But since moving forward we will add more types of comments, like multi-line comments, etc.
