--- a/packages/httl-website/src/content/introduction/about-httl.mdx
+++ b/packages/httl-website/src/content/introduction/about-httl.mdx
@@ -2,14 +2,14 @@ import { Steps } from 'nextra/components'
 
 # What is HTTL?
 
-HTTL ("HyperText Transfer Language") is a lightweight, programmng language designed to for developers who prefers using code to operate with API rathen then UI.\
-\
-HTTL is a declarative language that allows you to write queries to the API in a way that is similar to SQL.\
-The same as in SQL, HTTL allows you to write HTTP queries, set the result in variables and use them in the next queries.\
-\
-HTTL also can be use as integration language between different systems, as it allows to write queries to different APIs in one file.
+**HTTL (“HyperText Transfer Language”)** is a lightweight programming language designed for developers who prefer using code to interact with APIs rather than relying on a UI (yes, finally!). 
+<br />
+It is a declarative language that lets you write API queries in a manner similar to SQL. Like SQL, HTTL allows you to write HTTP queries, store their results in variables, and then reference those variables in subsequent queries.
+<br />
+HTTL can also serve as an integration language between different systems. By allowing you to write queries for multiple APIs in a single file, it simplifies data exchange and orchestration across diverse services.
+
 
 > [!NOTE]
 >
-> The project is in active development phase and any feedback and contribution is welcome.
+> The project is currently in active development, and we welcome any feedback or contributions.
 > 
