--- a/packages/httl-website/src/content/introduction/contributing.mdx
+++ b/packages/httl-website/src/content/introduction/contributing.mdx
@@ -1,8 +1,12 @@
 # Feedback & Contributing
  
-Yes, please! More feedback, more contributions, more ideas, more everything! 
-Ther are so many things that are already in the roadmap, but I'm sure there are many more that I haven't thought of yet.
+Yes, please! More feedback, more contributions, more ideas—bring it all!
+I already have plenty of items on the roadmap, but I’m sure there are many things I haven’t thought of yet.
 
-So please, if you have any feedback, ideas, or contributions, please reach out to me. I'm always happy to hear from you.
+So if you have any feedback, ideas, or contributions, don’t hesitate to reach out. I’m always happy to hear from you!
 
- [Twitter](https://twitter.com/httldev) or [GitHub](
+## You can reach me on:
+
+- [GitHub](https://github.com/httl-lang/HTTL)
+- [BlueSky](https://bsky.app/profile/httl-lang.bsky.social)
+- [Discrod](https://discord.gg/hC6BTWTJ)
