--- a/packages/httl-website/src/content/introduction/installation.mdx
+++ b/packages/httl-website/src/content/introduction/installation.mdx
@@ -1,22 +1,20 @@
 import { Steps } from 'nextra/components'
 import { Tabs } from 'nextra/components'
 
-# Get Started
+# Installation
+
+Due to the active development phase, the first version of HTTL is available only as a Visual Studio Code extension.\
+However, We are actively working on a CLI version of HTTL, which will be available soon, along with a JetBrains plugin.
+
 
 ## Quick Start with HTTL
-
-Due to active development phase, the first version of HTTL is available as Visual Studio Code extension only.\
-But I actively work on the standalone version of HTTL which will be available soon as well as JetBrains plugin. 
-
 
 <Steps>
 ### Install HTTL 
 
 <Tabs items={['VS Code', 'JetBrains', 'CLI']}>
   <Tabs.Tab>
-  Download the latest version of HTTL from the Visual Studio Marketplace:
-
-  [Visual Studio Marketplace Downloads](https://marketplace.visualstudio.com/items?itemName=HTTL.httl-vscode)
+  Download the latest version of HTTL from the [Visual Studio Marketplace](https://marketplace.visualstudio.com/items?itemName=HTTL.httl-vscode)
   </Tabs.Tab>
   <Tabs.Tab>
     Coming soon
@@ -28,20 +26,9 @@ But I actively work on the standalone version of HTTL which will be available so
 
 ### Create .httl file
 
-<Tabs items={['VS Code', 'JetBrains', 'CLI']} >
-  <Tabs.Tab>
-  Create a new file with `.httl` extension and start writing your code.
-  </Tabs.Tab>
-  <Tabs.Tab>
-    Coming soon
-  </Tabs.Tab>
-  <Tabs.Tab>
-    Coming soon
-  </Tabs.Tab>
-</Tabs>
+Create a new file with a `.httl` extension.
 
 ### Write a query 
-
 
 <Tabs items={['Basic', 'Advanced']} >
   <Tabs.Tab>
@@ -51,7 +38,6 @@ But I actively work on the standalone version of HTTL which will be available so
   </Tabs.Tab>
   <Tabs.Tab>
     ```httl filename="advanced.httl"
-    # Comprehensive Example of all HTTL features
     @base: https://reqres.in/api
 
     # Getting a bearer token
@@ -75,12 +61,11 @@ But I actively work on the standalone version of HTTL which will be available so
     # Update the user
     put /users/{new_user.id} {
       "name": "Robert",
-      "job": "CEO", # not bad for a new user
+      "job": "CEO",
     }
 
-    # Delete the user (too much for a new user)
+    # Delete the user
     delete /users/{new_user.id}
-    # Each request can have an assertion block to validate the status, headers, and body of the response 
     assert {
       status: 204,
       headers: {
@@ -96,9 +81,9 @@ But I actively work on the standalone version of HTTL which will be available so
 
 <Tabs items={['VS Code', 'JetBrains', 'CLI']} >
   <Tabs.Tab>
-    Click on the `Run` button to execute the query.\
-    Alternatively, you can use the hotkeys `Ctrl|Cmd + Enter` or `F5`.
-  <br/>    
+    Click the `Run` button to execute your query.\
+    Alternatively, you can use the shortcut keys `Ctrl|Cmd + Enter`, or press `F5`.
+    <br/>    
     <img src="/images/vscode-run.png" alt="VS Code Run" />
   </Tabs.Tab>
   <Tabs.Tab>
@@ -111,8 +96,9 @@ But I actively work on the standalone version of HTTL which will be available so
 
 ### For VS Code only
 
-Alternatively, you can use the `Quick Run` feature to run the query. 
-The query will be saved in the current workspace and you can run it anytime.
+Additionally, you can use the `Quick Run` panel to execute your query.
+The query text is saved in the current workspace, so you can run it again at any time.
+
  <br/> 
 <img src="/images/vscode-quick-run.png" alt="VS Code Quick Run" />
 
