--- a/packages/httl-website/src/content/guide/variables.mdx
+++ b/packages/httl-website/src/content/guide/variables.mdx
@@ -27,5 +27,7 @@ the response body is parsed and the properties are available for autocompletion
 
 note about response headers
 
+to mention - string interpolation
+
 
 
